objects/CMPL123__TWD_Reason_For_Change_Settings__mdt.object
<CustomObject>
    <description>This holds configuration for the Reason For Change feature of Trackwise Digital Platform</description>
    <fields>
        <fullName>CMPL123__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This toggles the entire feature on or off</description>
        <inlineHelpText>When checked, the Reason For Change feature is enabled. Note, if this feature is not in use, keep this checkbox unchecked to maintain optimum system performance.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Default_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the first value specified in Reason for Change Values will be shown as default on "Reason for Change" pop-up.</inlineHelpText>
        <label>Default Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CMPL123__Reason_for_Change_Outside_RDC__c</fullName>
        <inlineHelpText>Enter the Name of Custom Label exactly as it appears on that label in Setup. This label will serve as Default Reason for Change for operations outside of Record Detail Component</inlineHelpText>
        <label>Reason for Change Outside TWD RDC</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Reason_for_Change_Values__c</fullName>
        <inlineHelpText>Enter the names of Custom Labels, separated by comma exactly as they appear in the field Name on those labels in Setup. These labels will serve as Reason for Change picklist values that users will be able to select when they update a record.</inlineHelpText>
        <label>Reason for Change Values</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>TWD Reason For Change Settings</label>
    <pluralLabel>TWD Reason For Change Settings</pluralLabel>
</CustomObject>